# kristforge

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.txt  README.md  cl_amd.h  cl_nv.h  kristforge.cl  main.cpp  miner.cpp  miner.h  network.cpp  network.h  release.sh  state.cpp  state.h  utils.cpp  utils.h
.github/workflows/: release.yml  rust.yml  tests.yml
core/: Cargo.toml  build.rs
core/examples/: cli_args.rs
core/src/: lib.rs
core/src/krist/: address.rs  block.rs  mining.rs  mod.rs
core/src/network/: mod.rs
kristforge_core/: Cargo.toml  build_shader.sh
kristforge_core/src/: lib.rs  network.rs  utils.rs
kristforge_core/src/krist/: address.rs  block.rs  mining.rs
kristforge_core/src/miner/: gpu.rs  kristforge.comp  kristforge.comp.spv  mod.rs
kristforge_native/: Cargo.toml
kristforge_native/src/: main.rs
kristforge_web/: .gitignore  Cargo.toml  build_wasm.sh  index.html
kristforge_web/src/: lib.rs
native/: Cargo.toml
native/src/: main.rs  thread_priority.rs
src/: ext.rs  main.rs  prelude.rs
src/krist/: address.rs  block.rs  mod.rs
src/miner/: interface.rs  kristforge.cl  miner.rs  mod.rs  selector.rs  types.rs
src/miner/cpu/: framework.rs  mod.rs  thread_priority.rs
src/miner/cpu/kernels/: avx2.rs  mod.rs  sha.rs  unoptimized.rs
src/miner/cpu/miner_impls/: mod.rs  naive.rs  x86_64_sha.rs
src/miner/gpu/: kristforge.cl  mod.rs
src/miner/ocl/: kristforge.cl  mod.rs
src/network/: http.rs  mod.rs  types.rs  websocket.rs  ws.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
