[package]
name = "kristforge"
version = "3.1.2"
description = "Hardware accelerated CPU and GPU Krist miner"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.45"
hex = "0.4.0"
thiserror = "1.0.10"
futures = "0.3.1"
tokio = { version = "0.2.11", features = [ "macros" ] }
tokio-tungstenite = { version = "0.10.1", features = [ "tls" ] }
isahc = "0.8.2"
lazy_static = "1.4.0"
structopt = "0.3.8"
url = { version = "2.1.1", features = [ "serde" ] }
indicatif = "0.14.0"
log = "0.4.8"
simplelog = "0.7.4"
dirs = "2.0.2"
rand = "0.7.3"
dynamic_ocl = { git = "https://github.com/dmarcuse/dynamic_ocl.git", rev = "ba2cfc239be685e7251918badd77242397a463bc" }
enumset = "0.4.4"
itertools = "0.8.2"
num_cpus = "1.11.1"
crossbeam = "0.7.3"
ring = "0.16.11"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2.67"

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
debug = false

[profile.dev.package."*"]
opt-level = 1
codegen-units = 1
