[package]
name = "kristforge"
version = "3.1.2"
description = "Hardware accelerated CPU and GPU Krist miner"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.115", features = [ "derive" ] }
serde_json = "1.0.57"
hex = "0.4.2"
thiserror = "1.0.20"
futures = "0.3.5"
tokio = { version = "0.2.22", features = [ "macros" ] }
tokio-tungstenite = { version = "0.11.0", features = [ "tls" ] }
isahc = "0.9.8"
lazy_static = "1.4.0"
structopt = "0.3.16"
url = { version = "2.1.1", features = [ "serde" ] }
indicatif = "0.15.0"
log = "0.4.11"
simplelog = "0.8.0"
dirs = "3.0.1"
rand = "0.7.3"
dynamic_ocl = "0.1.0-alpha.1"
enumset = "1.0.1"
itertools = "0.9.0"
num_cpus = "1.13.0"
crossbeam = "0.7.3"
ring = "0.16.15"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2.74"

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
debug = false

[profile.dev.package."*"]
opt-level = 1
codegen-units = 1
