[package]
name = "kristforge_web"
version = "4.0.0-alpha"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
description = "Hardware-accelerated CPU and GPU krist miner"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
kristforge_core = { path = "../kristforge_core" }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.19"
color-eyre = "0.5.10"
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.16"
tracing-error = "0.1.2"
tracing-wasm = "0.1.0"
futures-util = "0.3.13"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "console"
]
