[package]
name = "kristforge_web"
version = "4.0.0-alpha"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
description = "Hardware-accelerated CPU and GPU krist miner"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
kristforge_core = { path = "../core" }
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.20"
color-eyre = "0.5.10"
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.16"
tracing-error = "0.1.2"
tracing-wasm = "0.1.0"
futures-util = "0.3.13"
